--- a/requirements.txt
+++ b/requirements.txt
@@ -4,36 +4,29 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 
 # 数据库
-pymongo==4.15.4
-dnspython==2.8.0
-motor==3.7.1
+pymongo==4.6.1
+dnspython==2.4.2
+motor==3.3.2
 
 # 用户密码处理
 passlib==1.7.4
-bcrypt==5.0.0
+bcrypt==4.0.1
 
 # 图像处理
 opencv-python==4.8.1.78
-pillow==11.3.0
+pillow==10.2.0
 
 # 数据处理
-numpy==1.24.3
+numpy==1.26.3
 
 # 配置管理
 python-dotenv==1.0.0
-
-# 数据模型
-pydantic==2.4.0
-pydantic_core==2.10.0
-pydantic-settings>=2.0.0
+pydantic>=2.7.0
+pydantic-settings>=2.2.0
 
 # 系统工具
-psutil==7.1.2
+psutil==5.9.8
 
 # 开发测试
 pytest==7.4.0
-httpx==0.25.0
-
-# API 限流
-fastapi-limiter==0.1.6
-redis==5.0.4
+httpx==0.27.0
