--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+#Python 3.10
 # Web框架
 fastapi==0.104.1
 uvicorn==0.24.0
@@ -9,7 +10,9 @@ dnspython==2.4.2
 motor==3.3.2
 
 #模型
-torch
+torch==1.12.1
+matplotlib==3.7.3
+tqdm==4.67.1
 torchvision
 
 # 用户密码处理
@@ -17,11 +20,11 @@ passlib==1.7.4
 bcrypt==4.0.1
 
 # 图像处理
-opencv-python==4.8.1.78
-pillow==10.2.0
+pillow==11.3
+opencv-python==4.5.5.62
 
 # 数据处理
-numpy==1.26.3
+numpy==1.26.4
 
 # 配置管理
 python-dotenv==1.0.0
