--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,66 @@
-#Python 3.10
-# Web框架
-fastapi==0.104.1
+# ===== FastAPI框架 =====
+fastapi==0.103.2
+starlette==0.27.0
 uvicorn==0.24.0
-python-multipart==0.0.6
 
-# 数据库
+# ===== MongoDB相关 =====
+motor==3.3.2
 pymongo==4.6.1
 dnspython==2.4.2
-motor==3.3.2
 
-#模型
-torch==1.12.1+cu121
+# ===== 模型/科学计算 =====
+numpy==1.26.4
+networkx==3.3
+sympy==1.13.1
+mpmath==1.3.0
+
+# ===== 图像处理 =====
+opencv-python==4.5.5.62
+pillow==11.3.0
+
+# ===== 可视化 =====
 matplotlib==3.7.3
-tqdm==4.67.1
-torchvision
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.60.1
+kiwisolver==1.4.9
 
-# 用户密码处理
+# ===== Web/HTTP通信 =====
+httpx==0.27.0
+requests==2.32.5
+urllib3==2.5.0
+
+# ===== 密码 / 登陆认证支持 =====
 passlib==1.7.4
 bcrypt==4.0.1
 
-# 图像处理
-pillow==11.3
-opencv-python==4.5.5.62
-
-# 数据处理
-numpy==1.26.4
-
-# 配置管理
+# ===== 环境变量配置 =====
 python-dotenv==1.0.0
-pydantic>=2.7.0
-pydantic-settings>=2.2.0
+pydantic-settings==2.3.4
 
-# 系统工具
+# ===== pydantic & core =====
+pydantic==2.12.4
+pydantic_core==2.41.5
+annotated-types==0.7.0
+typing_extensions==4.15.0
+typing-inspection==0.4.2
+
+# ===== 文件上传 =====
+python-multipart==0.0.6
+
+# ===== 其它基础工具 =====
 psutil==5.9.8
+colorama==0.4.6
+sniffio==1.3.1
+iniconfig==2.3.0
+packaging==25.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+idna==3.11
+six==1.17.0
 
-# 开发测试
+# ===== 开发/调试 =====
 pytest==7.4.0
-httpx==0.27.0
+filelock==3.19.1
+pluggy==1.6.0
+tqdm==4.67.1
